Add username input text area to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <form id="login-form">
+      <label>Username: </label><BR>
+      <input name="username" id="username" /><BR>
       <button type="submit" name="login" id="login">Login</button>
     </form>
     <form id="logout-form">
