Create a visit button in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,15 @@
 
     <p></p>
 
+    <form id="visit-form">
+      <fieldset>
+        <legend>Visit</legend>
+        <input type="submit" name="visit" id="visit" value="Visit">
+      </fieldset>
+    </form>
+
+    <p></p>
+
     <form id="logout-form">
       <fieldset>
         <legend>Log Out</legend>
