--- a/client/index.html
+++ b/client/index.html
@@ -92,10 +92,10 @@
           credentials: 'include',
           body: JSON.stringify(data)
         })
-          .then((res) => {
+          .then(res => {
             return res.json();
           })
-          .then((data) => {
+          .then(data => {
             console.log(data);
           });
       }
@@ -104,7 +104,7 @@
         e.preventDefault();
         fetch('/visit', {
           method: 'POST',
-          credentials: 'include',
+          credentials: 'include'
         })
         .then(res => {
           return res.json();
@@ -121,16 +121,16 @@
         e.preventDefault();
         fetch('/logout', {
           method: 'POST',
-          credentials: 'include',
+          credentials: 'include'
         })
-          .then((res) => {
+          .then(res => {
             return res.json();
           })
-          .then((data) => {
+          .then(data => {
             console.log(data);
             if (data.error) {
-              console.log('There was an error...');
-            }
+            console.log('There was an error: ', data.error);
+          }
           });
       }
 
